--- a/app/views/admin/themes/index.html.erb
+++ b/app/views/admin/themes/index.html.erb
@@ -1,4 +1,20 @@
 themes#index
 
-<%= @themes.each do|theme| %>
+<h2>お題一覧</h2>
+
+<div class="new-theme-path">
+    <%= link_to "新規テーマ登録", new_admin_theme_path, class:"btn btn-outline-primary" %>
+</div>
+
+<% @themes.each do|theme| %>
+    <%= theme.id %>
+    <%= link_to admin_theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
+    <% end %>
+    <%= theme.name %>
+    <% if theme.is_active? %>
+        <p>公開中</p>
+        <% else %>
+        <p>非公開</p>
+    <% end %>
+<% end %>
 
