--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -3,13 +3,28 @@
 <table class="table">
     <tr>
         <th>ユーザーID</th>
-    
-    
-    
-    
-    
-    
-    
-    
+        <td><%= @user.id %>
+            <div class = "customer-status text-white">
+                <% if @customer.is_deleted? %>
+                    <span class="bg-danger p-2 rounded">
+                    退会
+                    </span>
+                    <% else %>
+                    <span class="bg-primary p-2 rounded">
+                    有効会員
+                    </span>
+                <% end %>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <th>ユーザー名</th>
+        <td><%= @user.name %></td>
+    </tr>
+    <tr>
+        <th>メールアドレス</th>
+        <td><%= @user.email %></td>
     </tr>
 </table>
+
+<%= link_to "編集する", edit_admin_user_path(@user.id),class: "btn btn-outline-primary" %>
