--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,10 @@
     </ul>
   </div>
 </nav>
-
-
-
+<div class ="container">
+  <div class="mx-auto" style="width: 500px;">
     <%= yield %>
+  </div>
+</div>
   </body>
 </html>
