--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,8 +1,13 @@
-user_themes#index
+<h1 class="text-center">お題一覧</h1>
 
-<h2>お題一覧</h2>
-<% @themes.each do |theme| %>
-    <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
+<div class="row">
+    <% @themes.each do |theme| %>
+        <div class="col-6">
+            <div class="text-center">
+                <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
+                <% end %>
+                <br><%= theme.name %>
+            </div>
+        </div>
     <% end %>
-    <%= theme.name %>
-<% end %>
+</div>
