--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,15 @@
-home#top
+<!-- テーマ一覧を表示　-->
 
-hello!!!
+<h1 class="text-center">お題一覧</h1>
+
+<div class="row">
+    <% @themes.each do |theme| %>
+        <div class="col-6">
+            <div class="text-center">
+                <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
+                <% end %>
+                <br><%= theme.name %>
+            </div>
+        </div>
+    <% end %>
+</div>
