--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,1 +1,30 @@
-users_theme#show
+
+<br>
+<div class="text-center">
+    <%= attachment_image_tag @theme, :image, :fill, 400, 250, format: "jpg" %><br>
+    <h2><strong><%= @theme.name %></strong></h2>
+    <%= @theme.introduction %>
+</div>
+
+<div class="text-center">
+    <div class="create-post">
+        <%= link_to "このお題でオリジナルカクテルを作る", new_theme_post_path(@theme.id) %>
+    </div>
+</div>
+
+<h2 class="text-center">みんなの作ったカクテル</h2>
+
+<div class="text-center">
+    <div class="row">
+        <% @posts.each do |post| %>
+            <div class="col-4">
+                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, :fill, 230, 200, size:"150x150", fallback: "no_image.jpg" %>
+                <% end %>
+                <%= post.name %><br>
+                <%= post.introduction %>
+            </div>
+        <% end %>
+    </div>
+</div>
+
+
