--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>新規カクテル投稿</h1>
+<h1 class="text-center">新規カクテル投稿</h1>
 
 <div class="create-theme-post">
     <%= form_for [@theme, @post] do |f| %>
@@ -6,20 +6,29 @@
             <label class="image">カクテル画像</label>
             <%= f.attachment_field :image %>
         </div>
-        <%= f.label :カクテル名 %><br>
-        <%= f.text_field :name %>
-        <br>
-        <%= f.label :カクテル説明 %><br>
-        <%= f.text_field :introduction %>
-        <br>
-            <div class="materials-form">
-                <%= f.fields_for :materials do |i| %>
-                    <%= f.label :材料 %> <%= i.text_field :name %>
-                    <br>
-                    <%= f.label :分量 %> <%= i.text_field :quantity %>
-                <% end %>
+        <div class="col-sm-7">
+            <%= f.label :カクテル名 %><br>
+            <%= f.text_field :name, :size=>"1", class:"form-control" %>
+        </div>
+        <div class="col-sm-12">
+            <%= f.label :カクテル説明 %><br>
+            <%= f.text_area :introduction, :size=>"20x7", class:"form-control" %>
+        </div>
+        <%= f.nested_fields_for :materials do |i| %>
+            <div class="form-group row">
+                <div class="col-sm-5">
+                    <%= f.label :材料 %><%= i.text_field :name, class:"form-control" %>
+                </div>
+                <div class="col-sm-3">
+                    <%= f.label :分量 %><%= i.text_field :quantity, class:"form-control" %>
+                </div>
+                <div class="col-sm-1">
+                    <p>ml</p>
+                <div class="col-sm-2">
+                    <%= f.add_nested_fields_link :materials, '追加' %><%= i.remove_nested_fields_link '削除' %>
+                </div>
             </div>
-        <br>
+        <% end %>
         <div class="submit">
             <%= f.submit "登録する" %>
         </div>
