--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,7 @@
     body {
     background: image-url('retina_wood.jpg')
     }
+
+    body {
+        font-family: 'Andale Mono','Hannotate SC',sans-serif;
+        }
