--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,3 +12,14 @@
         </div>
     </div>
 </div>
+<!-- 追加 -->
+<% if user_signed_in? %>
+    <% if @post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
+        <p><span>お気に入り解除: </span><%= link_to @post.favorites.count, theme_post_favorites_path(@post.theme.id, @post.id), method: :delete %></p>
+        <% else %>
+        <p><span>お気に入り登録: </span><%= link_to @post.favorites.count, theme_post_favorites_path(@post.theme.id, @post.id), method: :post %></p>
+    <% end %>
+<% else %>
+    <p><span>お気に入り数: </span><%= post.favorites.count %></p>
+<% end %>
+<!-- ここまで -->
