--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,38 @@
-users#show
+<br>
+<div class="row">
+    <div class="col-xs-5">
+        ここに画像
+    </div>
+    <div class="col-xs-7">
+        <h5><%= @user.name %>さんのページ</h5>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td>自己紹介文</td>
+                </tr>
+                <tr>
+                    <td>カクテル投稿数:<%= @user.posts.count %></td>
+                </tr>
+                <tr>
+                    <td>いいねをもらった数:<%= @user.favorites.count %></td>
+                </tr>
+            </tbody>        
+        </table>
+    </div>
+</div>
+<br>
+<div class="text-center">
+    <h4>このユーザーが投稿したカクテル</h4>
+    <div class="row">
+        <% @user.posts.each do |post| %>
+            <div class="col-3">
+                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"100x100", fallback: "no_image.jpg" %>
+                    <% end %>
+                <%= post.name %>
+            </div>
+        <% end %>
+    </div>
+</div>
+
+
+
