--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,6 @@
     body {
         font-family: 'Andale Mono','Hannotate SC',sans-serif;
         }
+
+/*ハートの色*/
+        .star-color {color: hsl(0, 0%, 14%)}
