--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,23 @@
 users#edit
+
+<h3>ユーザー情報編集</h3>
+
+<%= form_for(@user) do |f| %>
+    <div class="edit-user">
+        <div class="field">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: "name" %>
+        </div>
+        <div class="field">
+            <%= f.label :image %>
+            <%= f.attachment_field :image, class: "user_image" %>
+        </div>
+        <div class="field">
+            <%= f.label :introduction %>
+            <%= f.text_area :introduction, class: "introduction" %>
+        </div>
+        <div class="actions">
+            <%= f.submit 'ユーザー情報を更新する' %>
+        </div>
+    </div>
+<% end %>
