--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,20 @@
 <br>
 <div class="row">
-    <div class="col-xs-5">
-        ここに画像
+    <div class="col-5">
+        <%= attachment_image_tag @user, :image, size:"180x180", fallback: "no_image.jpg" %>
     </div>
-    <div class="col-xs-7">
-        <h5><%= @user.name %>さんのページ</h5>
+    <div class="col-7">
+        <h5><%= @user.name %> さんのページ</h5>
         <table class="table">
             <tbody>
                 <tr>
-                    <td>自己紹介文</td>
+                    <td><%= @user.introduction %></td>
                 </tr>
                 <tr>
-                    <td>カクテル投稿数:<%= @user.posts.count %></td>
+                    <td>カクテル投稿数 <i class="fas fa-cocktail fa-fw"></i><%= @user.posts.count %></td>
                 </tr>
                 <tr>
-                    <td>いいねをもらった数:<%= @user.favorites.count %></td>
+                    <td>いいねをもらった数 <i class="far fa-star fa-fw"><%= @user.favorites.count %></td>
                 </tr>
             </tbody>        
         </table>
@@ -22,17 +22,16 @@
 </div>
 <br>
 <div class="text-center">
-    <h4>このユーザーが投稿したカクテル</h4>
+    <h4 class="text-center">このユーザーが投稿したカクテル</h4>
+    <br>
     <div class="row">
         <% @user.posts.each do |post| %>
-            <div class="col-3">
-                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"100x100", fallback: "no_image.jpg" %>
+            <div class="col-4 mb-1 ">
+                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg" %>
                     <% end %>
-                <%= post.name %>
+                <%= post.name %><br>
+                <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%>
             </div>
         <% end %>
     </div>
 </div>
-
-
-
