--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,15 +1,40 @@
-<!-- テーマ一覧を表示　-->
-
-<h1 class="text-center">お題一覧</h1>
-
-<div class="row">
-    <% @themes.each do |theme| %>
-        <div class="col-6">
-            <div class="text-center">
-                <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
-                <% end %>
-                <br><%= theme.name %>
-            </div>
+<br>
+<div class="head">
+    <div class="text-center">
+        <h1>Welcome to <strong>Blend</strong> <i class="fas fa-cocktail fa-fw"></i></h1><br>
+        あなたのクソみたいな酒カスlifeを一緒に盛り上げるサービスです<br>
+        今日もアルコール入れて脳味噌を溶かしていきましょう
+    </div>
+</div>
+<br>
+<div class="new-post-top4">
+    <div class="text-center">
+    <h3>New post cocktails</h3><br>
+        <div class="row">
+            <% @new_posts.each do |n| %>
+                <div class="col-2 mb-1">
+                    <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"120x120", fallback: "no_image.jpg" %><br>
+                    <% end %>
+                    <%= n.name %><br>
+                    <i class="far fa-star fa-fw star-color"></i></span><%= n.favorites.count%>
+                </div>
+            <% end %>
         </div>
-    <% end %>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="post-rank col-6">
+        <div class="text-center">
+            <h3><i class="fas fa-glass-martini-alt fa-fw"></i>Cocktail Ranking</h3>
+            <% @post_ranks.each.with_index(1) do |post, i| %>
+            No.<%= i %><%= post.name %><br>
+            <% end %>       
+        </div>
+    </div>
+    <div class="user-rank col-6">
+        <div class="text-center">
+            <h3><i class="fas fa-trophy fa-fw"></i>Best bartender</h3>
+        </div>
+    </div>
 </div>
