--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
           各種設定
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">ユーザー設定</a>
+          <a class="dropdown-item" href="#">ログアウト</a>
+          <a class="dropdown-item" href="#">♪♪♪</a>
         </div>
       </li>
     </ul>
