--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,17 +6,17 @@
         </div>
     </div>
     <div class="col-5">
-        <h5><%= @user.name %> さんが作りました</h5>
+        <h5><%= @post.user.name %> さんが作りました</h5>
         <table class="table">
             <tbody>
                 <tr>
                     <td>
-                        <%= link_to user_path(@user) do %>
-                        <%= attachment_image_tag @user, :image, size:"130x130", fallback: "no_image.jpg" %>
+                        <%= link_to user_path(@post.user) do %>
+                        <%= attachment_image_tag @post.user, :image, size:"130x130", fallback: "no_image.jpg" %>
                         <% end %>
                     </td>
                     <td>
-                        <%= @user.introduction %>
+                        <%= @post.user.introduction %>
                     </td>
                 </tr>
             </tbody>
@@ -27,21 +27,31 @@
         </div>
     </div>
 </div>
-<div class="row">
-    <table class="table">
-        <tbody>
-            <tr>
-                            <%= @post.name %><br>
-                            <%= @post.introduction %><br>
-                            <div class="m-each">
-                                <% @post.materials.each do |m| %>
-                                    <%= m.name %>
-                                    <%= m.quantity %>ml
-                                <% end %>
-                            </div>
-        </tbody>
-    </table>
 
+<div class="text-center">
+    <div class="row">
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td>
+                        <h2><strong><%= @post.name %></strong></h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td><h3><strong>説明文</h3></strong></td>
+                <tr>
+                    <td>
+                        <h3><%= @post.introduction %></h3>
+                    </td>
+                </tr>
+                <tr>
+                                    <% @post.materials.each do |m| %>
+                                        <%= m.name %>
+                                        <%= m.quantity %>ml
+                                    <% end %>
+            </tbody>
+        </table>
+    </div>
 </div>
 <!-- 追加 -->
 <% if user_signed_in? %>
