--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,13 +7,23 @@
     </div>
 </div>
 <br>
-<div class="new-post-top4">
+<div class="">
+
+
+
+
+
+
+
+
+
+<div class="new-post-top6">
     <div class="text-center">
     <h3>New post cocktails</h3><br>
         <div class="row">
             <% @new_posts.each do |n| %>
                 <div class="col-2 mb-1">
-                    <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"120x120", fallback: "no_image.jpg" %><br>
+                    <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"200x200", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
                     <%= n.name %><br>
                     <i class="far fa-star fa-fw star-color"></i></span><%= n.favorites.count%>
