--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-7">
         <div class="text-center">
-            <%= attachment_image_tag @post, :image, :fill, 230, 200, size:"300x300", fallback: "no_image.jpg" %>
+            <%= attachment_image_tag @post, :image, :fill, 230, 200, size:"300x300", fallback: "no_image.jpg", class: "img-thumbnail" %>
         </div>
     </div>
     <div class="col-5">
@@ -12,7 +12,7 @@
                 <tr>
                     <td>
                         <%= link_to user_path(@post.user) do %>
-                        <%= attachment_image_tag @post.user, :image, size:"130x130", fallback: "no_image.jpg" %>
+                        <%= attachment_image_tag @post.user, :image, size:"130x130", fallback: "no_image.jpg", class: "img-thumbnail" %>
                         <% end %>
                     </td>
                     <td>
@@ -21,10 +21,6 @@
                 </tr>
             </tbody>
         </table>
-        <div class="fav-user">
-            <p>バーテンダー戦闘力:</p>
-            <p class="text-center">お気に入り登録</p>
-        </div>
     </div>
 </div>
 
