--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -3,9 +3,9 @@
 
 <div class="row">
     <% @themes.each do |theme| %>
-        <div class="col-6">
+        <div class="col-4">
             <div class="text-center">
-                <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg" %>
+                <%= link_to theme_path(theme.id) do %><%= attachment_image_tag theme, :image, :fill, 200, 150, format: "jpg", class: "img-thumbnail" %>
                 <% end %>
                 <br><%= theme.name %>
             </div>
