--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,7 +1,7 @@
 
 <br>
 <div class="text-center">
-    <%= attachment_image_tag @theme, :image, :fill, 400, 250, format: "jpg" %><br>
+    <%= attachment_image_tag @theme, :image, :fill, 400, 250, format: "jpg", class: "img-thumbnail" %><br>
     <h2><strong><%= @theme.name %></strong></h2>
     <%= @theme.introduction %>
 </div>
@@ -18,7 +18,7 @@
     <div class="row">
         <% @posts.each do |post| %>
             <div class="col-4 mb-1">
-                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, :fill, 230, 200, size:"150x150", fallback: "no_image.jpg" %>
+                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, :fill, 230, 200, size:"150x150", fallback: "no_image.jpg", class: "img-thumbnail" %>
                 <% end %><br>
                 <%= post.name %><br>
                 <%= post.introduction %>
