--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,16 @@
 <br>
 <div class="row">
-    <div class="col-5">
-        <%= attachment_image_tag @user, :image, size:"180x180", fallback: "no_image.jpg" %>
+    <div class="text-center col-5">
+        <%= attachment_image_tag @user, :image, size:"180x180", fallback: "no_image.jpg", class: "img-thumbnail" %>
+        <div class="user-name">
+            <br><h5><%= @user.name %> さんのページ</h5>
+        </div>
     </div>
     <div class="col-7">
-        <h5><%= @user.name %> さんのページ</h5>
         <table class="table">
             <tbody>
                 <tr>
-                    <td><%= @user.introduction %></td>
+                    <td>自己紹介 <i class="far fa-address-card fa-fw"></i><%= @user.introduction %></td>
                 </tr>
                 <tr>
                     <td>カクテル投稿数 <i class="fas fa-cocktail fa-fw"></i><%= @user.posts.count %></td>
@@ -16,18 +18,36 @@
                 <tr>
                     <td>いいねをもらった数 <i class="far fa-star fa-fw"><%= @user.favorites.count %></td>
                 </tr>
+                <tr>
+                    <td>評価された数 <i class="far fa-thumbs-up fa-fw"></i><%= @user.followers.count %></td>
+                </tr>
+                <tr>
+                    <td>        
+                        <div class="fav-user">
+                            <% if current_user != @user %>
+                                <% if @user.followed_by?(current_user) %>
+                                    評価を取り消す <%= link_to user_relationships_path(@user.id), method: :delete do %><i class="fas fa-user-minus"></i>
+                                    <% end %>
+                                <% else %>
+                                    評価する <%= link_to user_relationships_path(@user.id), method: :post do %><i class="fas fa-user-plus"></i>
+                                    <% end %>
+                                <% end %>
+                            <% end %>
+                        </div>
+                    </td>
+                </tr>
             </tbody>        
         </table>
     </div>
 </div>
 <br>
 <div class="text-center">
-    <h4 class="text-center">このユーザーが投稿したカクテル</h4>
+    <h4>このユーザーが投稿したカクテル</h4>
     <br>
     <div class="row">
         <% @user.posts.each do |post| %>
-            <div class="col-4 mb-1 ">
-                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg" %>
+            <div class="col-4 mb-1">
+                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
                 <%= post.name %><br>
                 <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%>
