--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,9 +22,14 @@
     background-blend-mode:lighten;
     }
 
-    body {
-        color: rgba(53, 53, 53, 0.9)/* 文字色指定 */
+    .container {
+    background-color:rgba(255, 255, 255, 0.459);
+    width:  900px;
     }
+
+    //body {
+        //color: rgba(53, 53, 53, 0.9)/* 文字色指定 */
+    //}
 
     body {
         font-family: 'Andale Mono','Hannotate SC',sans-serif;
