--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,14 +1,14 @@
 
 <br>
 <div class="text-center">
-    <%= attachment_image_tag @theme, :image, :fill, 400, 250, format: "jpg", class: "img-thumbnail" %><br>
-    <h2><strong><%= @theme.name %></strong></h2>
+    <%= attachment_image_tag @theme, :image, :fill, 400, 250, format: "jpg", class: "img-thumbnail" %><br><br>
+    <h2><strong><%= @theme.name %></strong></h2><br>
     <%= @theme.introduction %>
 </div>
 <br>
 <div class="text-center">
     <div class="create-post">
-        <%= link_to "このお題でオリジナルカクテルを作る", new_theme_post_path(@theme.id), class:"btn page-link text-dark d-inline-block" %>
+        <%= link_to "このテーマでオリジナルカクテルを作る", new_theme_post_path(@theme.id), class:"btn btn-dark", type: "button" %>
     </div>
 </div>
 <br>
@@ -21,7 +21,7 @@
                 <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, :fill, 230, 200, size:"150x150", fallback: "no_image.jpg", class: "img-thumbnail" %>
                 <% end %><br>
                 <%= post.name %><br>
-                <%= post.introduction %>
+                <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%>
             </div>
         <% end %>
     </div>
