--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -18,14 +18,14 @@
 <br>
 <div class="new-post-top6">
     <div class="text-center">
-    <h3>New post cocktails</h3><br>
+    <h3><strong>みんなの新しい投稿</strong></h3><br>
         <div class="row">
             <% @new_posts.each do |n| %>
-                <div class="col-2 mb-1">
+                <div class="col-4 mb-1">
                     <%= link_to theme_post_path(n.theme.id, n.id) do %><%= attachment_image_tag n, :image, size:"200x200", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
-                    <%= n.name %><br>
-                    <i class="far fa-star fa-fw star-color"></i></span><%= n.favorites.count%>
+                    <font color=red>New</font> <%= n.name %><br>
+                    <i class="far fa-star fa-fw star-color"></i><%= n.favorites.count%>
                 </div>
             <% end %>
         </div>
@@ -37,13 +37,31 @@
         <div class="text-center">
             <h3><i class="fas fa-glass-martini-alt fa-fw"></i>Cocktail Ranking</h3>
             <% @post_ranks.each.with_index(1) do |post, i| %>
-            No.<%= i %><%= post.name %><br>
+                <table class="table">
+                    <tr>
+                        <td>
+                            <strong>No.<%= i %></strong> 
+                            <i class="far fa-star fa-fw star-color"><%= post.favorites.count%></i>
+                            <%=link_to theme_post_path(post.theme.id, post.id) do %>
+                            <%= post.name %>
+                        </td>
+                        <% end %>
+                    </tr>
+                </table>
             <% end %>       
         </div>
     </div>
     <div class="user-rank col-6">
         <div class="text-center">
-            <h3><i class="fas fa-trophy fa-fw"></i>Best bartender</h3>
+            <h3><u class="fas fa-trophy fa-fw"></u>Best bartender</h3>
+            <% @user_ranks.each.with_index(1) do |user, u| %>
+                <table class="table">
+                    <tr>
+                        <td><strong>No.<%= u %></strong> <%= link_to user_path(user.id) do%><%= user.name %></td>
+                        <% end %>
+                    </tr>
+                </table>
+            <% end %>  
         </div>
     </div>
 </div>
