--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,42 +10,68 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
 
-  <body>
-  <!-- ヘッダー -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Blend</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="home/about">about <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/themes">お題</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/users/:id">マイページ</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          各種設定
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">ユーザー設定</a>
-          <%= link_to destroy_user_session_path, method: :delete do %><a class="dropdown-item" href="/">ログアウト</a>
-          <% end %>
-          <a class="dropdown-item" href="#">♪♪♪</a>
+<body>
+  <nav class="sticky-top navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Blend</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <div class="nav-link">
+            <i class="far fa-lightbulb fa-fw"></i><%= link_to "about", home_about_path, :style=>"color:white;" %>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-wine-bottle fa-fw"></i><%= link_to "お題", themes_path, :style=>"color:white;" %>
+          </div>
+        </li>
+        <% if user_signed_in? %>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-user-alt fa-fw"></i><%= link_to "マイページ", user_path(current_user), :style=>"color:white;" %>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-tools fa-fw"></i><%= link_to "ユーザー設定", edit_user_path(current_user), :style=>"color:white;" %>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-sign-out-alt fa-fw"></i><%= link_to "ログアウト", destroy_user_session_path, method: :delete, :style=>"color:white;" %>
+          </div>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-sign-in-alt fa-fw"></i><%= link_to "ログイン", new_user_session_path, :style=>"color:white;" %>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-user-plus fa-fw"></i><%= link_to "新規登録", new_user_registration_path, :style=>"color:white;" %>
+          </div>
+        </li>
+      </ul>
+      <% end %>
+    </div>
+  </nav>
+      <div class ="container">
+        <div class="mx-auto" style="width: 800px;">
+          <%= yield %>
         </div>
-      </li>
-    </ul>
+      </div>
+
+<div class="text-center">
+  <footer class="fixed-bottom navbar navbar-expand-lg navbar-dark bg-dark">
+      <span class="text-muted">©︎ Blend</span>
+  </footer>
   </div>
-</nav>
-<div class ="container">
-  <div class="mx-auto" style="width: 800px;">
-    <%= yield %>
-  </div>
-</div>
-  </body>
+
+</body>
 </html>
+
+
