--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,9 @@
             min-height: 700px;
             margin-bottom: 40px;
             }
+
+
+//home.html
+            .head {
+                background-color: rgba(255, 255, 255, 0.877);
+                }
