--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,24 +17,38 @@
 
 
     body {
-    background: image-url('food.png');
-    background-color:rgba(255,255,255,0.2);
-    background-blend-mode:lighten;
+    background: image-url('retina_wood.jpg');
+    //background-color:rgba(255, 255, 255, 0.637);
+    //background-blend-mode:lighten;
     }
 
     body {
         font-family: 'Andale Mono','Hannotate SC',sans-serif;
         }
 
-        .container {
-            background-color:rgba(255, 255, 255, 0.459);
-            width:  900px;
-            min-height: 700px;
-            margin-bottom: 40px;
-            }
+    .container {
+        background-color:rgba(255, 245, 238, 0.95);
+        width:  900px;
+        min-height: 700px;
+        margin-bottom: 25px;
+        margin-top: 10px;
+        }
 
+    .main-visual {
+    background: image-url('uuu.jpg');
+        width: 100%;
+        height: 300px; 
+        background-size: cover;
+        background-position: 50% 20%;
+    }
+
+    .main-visual-content{
+        width: 40%;
+        height: 300px;
+        background-color: rgba(0, 0, 0, 0.637);
+        text-align: center; /* 文字を中央揃えにする */
+        padding-top: 50px; 
+        color: #fff;
+    }
 
 //home.html
-            .head {
-                background-color: rgba(255, 255, 255, 0.877);
-                }
