--- a/app/views/devise/user/registrations/new.html.erb
+++ b/app/views/devise/user/registrations/new.html.erb
@@ -1,46 +1,56 @@
-<div class ="container">
-  <div class="mx-auto" style="width: 500px;">
-
-    <h2 class="text-center">新規登録</h2>
-
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="field">
-      <%= f.label :ユーザーネーム %><br />
-      <%= f.text_field :name %>
-    </div>
-
-    <div class="field">
-      <%= f.label :メールアドレス %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :パスワード %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-    <font color="red">
-      <%= f.label :※もう一度パスワードを入力してください %>
-    </font><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
 <br>
-    <div class="checkbox">
-      <%= f.check_box :agreement %><%= f.label :あなたが20歳以上の場合はチェックを入れてください %>
-    </div>
-<br>
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-<% end %>
+    <h2 class="text-center"><strong>新規登録</strong></h2>
 
-<%= render "devise/user/shared/links" %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  </div>
-</div>
+        <div class="field">
+          <div class="form-group row">
+            <div class="col-sm-4">
+              <%= f.label :ユーザーネーム %><br />
+              <%= f.text_field :name, class:"form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="form-group row">
+            <div class="col-sm-4">
+              <%= f.label :メールアドレス %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="form-group row">
+            <div class="col-sm-4">
+                <%= f.label :パスワード %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> 文字以上で入力してください)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="form-group row">
+            <div class="col-sm-4">
+              <font color="red">
+                <%= f.label :※もう一度パスワードを入力してください %>
+              </font><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="checkbox">
+          <%= f.check_box :agreement %><strong>あなたが20歳以上の場合はチェックを入れてください</strong>
+        </div>
+        <br>
+        <div class="actions">
+          <%= f.submit "ユーザー登録", class:"btn btn-dark" %>
+        </div>
+    <% end %>
+    <%= render "devise/user/shared/links" %>
