--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,8 @@
 <br>
-<h1 class="text-center">新規カクテル投稿</h1>
-<div class="create-theme-post">
-    <%= form_for [@theme, @post] do |f| %>
+<h1 class="text-center"><strong><%= @theme.name %></strong>でカクテル作り</h1>
+<br>
+<%= form_for [@theme, @post] do |f| %>
+    <div class="create-theme-post">
         <div class="col-sm-5">
             <label class="image"><h5><i class="fas fa-camera fa-fw"></i> カクテル画像</h5></label>
             <%= f.attachment_field :image %>
@@ -15,9 +16,9 @@
         <div class="col-sm-12">
             <h5><i class="fas fa-glass-cheers fa-fw"></i> カクテル説明</h5>
             <%= f.text_area :introduction, :size=>"20x7", class:"form-control" %>
-        </div>
-        <%= f.nested_fields_for :materials do |i| %>
-            <form>
+        </div><br>
+        <form>
+            <%= f.nested_fields_for :materials do |i| %>
                 <div class="form-row">
                     <div class="col-sm-3">
                         <h5><i class="fas fa-vial fa-fw"></i> 材料</h5><%= i.text_field :name, class:"form-control" %>
@@ -30,13 +31,13 @@
                         <% end %>
                     </div>
                 </div>
-            </form>
-        <% end %>
+            <% end %>
+        </form>
         <br>
         材料を追加する<%= f.add_nested_fields_link :materials do %><i class="fas fa-plus-circle fa-fw fa-lg"></i>
         <% end %>
         <div class="text-center">
-            <%= f.submit "登録する", class:"btn btn-dark btn-lg", type: "button" %>
+            <%= f.submit "登録する", class:"btn btn-dark" %>
         </div>
-    <% end %>
-</div>
+    </div>
+<% end %>
