--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,11 @@
 <br>
 <div class="row">
-    <div class="col-7">
+    <div class="col-6">
         <div class="text-center">
             <%= attachment_image_tag @post, :image, :fill, 230, 200, size:"300x300", fallback: "no_image.jpg", class: "img-thumbnail" %>
         </div>
     </div>
-    <div class="col-5">
+    <div class="col-6">
         <h5><%= @post.user.name %> さんが作りました</h5>
         <table class="table">
             <tbody>
@@ -21,42 +21,47 @@
                 </tr>
             </tbody>
         </table>
+        <div class="fav-count">
+            このカクテルのいいね数 : <strong><%= @post.favorites.count %></strong>
+        </div>
+        <br>
+        <div class="fav">
+            <div class="text-center">
+                <% if user_signed_in? %>
+                    <% if @post.favorited_by?(current_user) %>
+                        いいね解除<br>
+                        <%= link_to theme_post_favorites_path(@post.theme.id, @post.id), method: :delete do %>
+                        <i class="fas fa-star fa-fw fa-2x"></i>
+                        <% end %>
+                        <% else %>
+                        このカクテルをいいねする<br>
+                        <%= link_to theme_post_favorites_path(@post.theme.id, @post.id), method: :post do %>
+                        <i class="far fa-star fa-fw fa-2x"></i>
+                        <% end %>
+                    <% end %>
+                <% end %>
+            </div>
+        </div>
     </div>
 </div>
-
+<br>
+<br>
 <div class="text-center">
     <div class="row">
-        <table class="table">
-            <tbody>
-                <tr>
-                    <td>
-                        <h2><strong><%= @post.name %></strong></h2>
-                    </td>
-                </tr>
-                <tr>
-                    <td><h3><strong>説明文</h3></strong></td>
-                <tr>
-                    <td>
-                        <h3><%= @post.introduction %></h3>
-                    </td>
-                </tr>
-                <tr>
-                                    <% @post.materials.each do |m| %>
-                                        <%= m.name %>
-                                        <%= m.quantity %>ml
-                                    <% end %>
-            </tbody>
-        </table>
+        <div class="col-6">
+            <h4><strong><i class="fas fa-cocktail fa-fw"></i> <%= @post.name %></strong></h4><br>
+            <h4><i class="fas fa-vial fa-fw"></i> 材料</h4>
+            <div class="m-each">
+                <% @post.materials.each do |m| %>
+                    ・<%= m.name %> <%= m.quantity %>ml<br>
+                <% end %>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="c-intro">
+                <h4><i class="fas fa-glass-cheers fa-fw"></i> カクテル説明</h4>
+                <%= @post.introduction %>
+            </div>
+        </div>
     </div>
 </div>
-<!-- 追加 -->
-<% if user_signed_in? %>
-    <% if @post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-        <p><span>お気に入り解除: </span><%= link_to @post.favorites.count, theme_post_favorites_path(@post.theme.id, @post.id), method: :delete %></p>
-        <% else %>
-        <p><span>お気に入り登録: </span><%= link_to @post.favorites.count, theme_post_favorites_path(@post.theme.id, @post.id), method: :post %></p>
-    <% end %>
-<% else %>
-    <p><span>お気に入り数: </span><%= @post.favorites.count %></p>
-<% end %>
-<!-- ここまで -->
