--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,10 +47,13 @@
     <div class="row">
         <% @user.posts.each do |post| %>
             <div class="col-4 mb-1">
-                <%= link_to theme_post_path(:theme_id => @theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
+                <%= link_to theme_post_path(:theme_id => post.theme.id, :id => post.id) do %><%= attachment_image_tag post, :image, size:"140x140", fallback: "no_image.jpg", class: "img-thumbnail" %><br>
                     <% end %>
                 <%= post.name %><br>
                 <i class="far fa-star fa-fw star-color"></i></span><%= post.favorites.count%>
+                <% if current_user != @user %>
+                    <% link_to user_path(@user), method: :delete, class:"btn btn-danger" %>
+                <% end %>
             </div>
         <% end %>
     </div>
