--- a/app/views/devise/user/registrations/new.html.erb
+++ b/app/views/devise/user/registrations/new.html.erb
@@ -8,7 +8,7 @@
           <div class="form-group row">
             <div class="col-sm-4">
               <%= f.label :ユーザーネーム %><br />
-              <%= f.text_field :name, class:"form-control" %>
+              <%= f.text_field :name, placeholder:"カクテル太郎", class:"form-control" %>
             </div>
           </div>
         </div>
@@ -17,7 +17,7 @@
           <div class="form-group row">
             <div class="col-sm-4">
               <%= f.label :メールアドレス %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"example@abc.com", class:"form-control" %>
             </div>
           </div>
         </div>
