--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
+
+          <div class="admin-head">
+            <% if admin_signed_in? %>
+              <li class="nav-item">
+                <div class="nav-link">
+                  <%= link_to "テーマ一覧", admin_themes_path, :style=>"color:white;" %>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="nav-link">
+                  <%= link_to "ユーザー一覧", admin_users_path, :style=>"color:white;" %>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="nav-link">
+                  <%= link_to "投稿一覧", admin_posts_path, :style=>"color:white;" %>
+                </div>
+              </li>
+            <% end %>
+          </div>
+
         <li class="nav-item active">
           <div class="nav-link">
             <i class="far fa-lightbulb fa-fw"></i><%= link_to "about", home_about_path, :style=>"color:white;" %>
@@ -55,8 +76,13 @@
             <i class="fas fa-user-plus fa-fw"></i><%= link_to "新規登録", new_user_registration_path, :style=>"color:white;" %>
           </div>
         </li>
+        <li class="nav-item">
+          <div class="nav-link">
+            <i class="fas fa-user-graduate"></i><%= link_to "管理者はこちら", new_admin_session_path, :style=>"color:white;" %>
+          </div>
+        </li>
+        <% end %>
       </ul>
-      <% end %>
     </div>
   </nav>
 
