--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -68,3 +68,20 @@
         </div>
     </div>
 </div>
+<div class="post-comment">
+    <div class="row">
+        <div class="comment-area">
+            <%= form_for @post_comment, url: theme_post_post_comments_path(@post.theme.id, @post.id), method: :post do |f| %>
+                <div class="col-xs-12">
+                    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+                </div>
+                <%= f.submit "コメントする" %>
+            <% end %>
+        </div>
+    </div>
+    <div class="row">
+        <% @post.post_comments.each do |post_comment| %>
+        <%= post_comment.comment %>
+        <% end %>
+    </div>
+</div>
